Refactor Day02 p1